package backend.entities;

/**
 * Enam with all the possible entity details
 */
public enum Data {
    ID,
    NAME,
    SURNAME,
    ADDRESS,
    EMAIL,
    CREDIT_CARD,
    BANK_ACCOUNT,
    CRN,
    SORT_CODE,
}
